...
        android:layout_marginEnd="20dp"
        android:padding="40dp"
        android:text="@string/welcome_to_the_location_reminder_app"
        android:textAlignment="center"
        android:textColor="@color/cardview_dark_background"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:shadowColor="@color/background"
        android:shadowDx="5"
...
